fixed enrollment logic + generate entiltment + deduplication